# boer_lorenz_mars

./: AGENTS.md  README.md  boer_lorenz_reference.md  meson.build  plan.md  pyproject.toml
src/mars_exact_lec/: __init__.py  _validation.py  constants_mars.py  validation.py
src/mars_exact_lec/boer/: __init__.py  closure.py  conversions.py  reservoirs.py
src/mars_exact_lec/common/: __init__.py  geopotential.py  grid_weights.py  integrals.py  normalization.py  time_derivatives.py  topography_measure.py  zonal_ops.py
src/mars_exact_lec/io/: __init__.py  mask_below_ground.py
src/mars_exact_lec/reference_state/: __init__.py  finite_volume_solver.py  interpolate_isentropes.py  koehler1986_geometry.py  koehler1986_preprocessing.py  koehler1986_solver.py  koehler_solver.py  solution.py
src/seba/: io_tools.py
tests/: helpers.py  helpers_exact.py  test_boer_closure.py  test_conversions.py  test_exact_math_consistency.py  test_grid_weights.py  test_integrals.py  test_isentropic_interpolation.py  test_ke_partition.py  test_koehler1986_phase4.py  test_koehler1986_preprocessing.py  test_koehler1986_zero_ape_math.py  test_mask.py  test_reference_state.py  test_reference_state_contracts.py  test_reference_state_cross_solver.py  test_reference_state_finite_volume_internal.py  test_reference_state_finite_volume_regression.py  test_reference_state_finite_volume_stress.py  test_reference_state_phase01.py  test_reference_state_regression.py  test_reference_state_stress.py  test_seba_validation.py  test_topographic_terms.py  test_topography_measure.py  test_validation_runtime.py  test_zonal_ops.py
